--- a/index.html
+++ b/index.html
@@ -170,12 +170,13 @@
             15% { transform: translateY(-60px); opacity: 0.8; } /* Leve fade no meio */
             16% { transform: translateY(-80px); opacity: 0.5; } /* Fade mais acentuado */
             17% { transform: translateY(-100px); opacity: 0.2; } /* Quase invisível */
-            18% { transform: translateY(-118px); opacity: 0; } /* INVISÍVEL só no final */
-            18.5% { transform: translateY(-80px); opacity: 0; } /* Começa transparente mais baixo */
-            19% { transform: translateY(-100px); opacity: 0.3; } /* Subindo e aparecendo */
-            19.5% { transform: translateY(-115px); opacity: 0.6; } /* Continuando a subir e aparecer */
-            20% { transform: translateY(-121px); opacity: 0.8; } /* Quase na posição, quase visível */
-            20.5% { transform: translateY(-120px); opacity: 1; } /* Posição final + totalmente visível */
+            18% { transform: translateY(-118px); opacity: 0; } /* INVISÍVEL só no final - início da chegada */
+            18.5% { transform: translateY(-119px); opacity: 0.1; } /* Começando fade-in bem suave */
+            19% { transform: translateY(-120px); opacity: 0.2; } /* Fade-in gradual */
+            19.5% { transform: translateY(-121px); opacity: 0.4; } /* Continuando fade-in */
+            20% { transform: translateY(-122px); opacity: 0.6; } /* Mais visível */
+            20.5% { transform: translateY(-121px); opacity: 0.8; } /* Quase totalmente visível */
+            21% { transform: translateY(-120px); opacity: 1; } /* Totalmente visível na posição final */
             22.5% { transform: translateY(-120px); opacity: 1; } /* Posição final mantida */
             34% { transform: translateY(-120px); opacity: 1; } /* Menos tempo parado */
             35% { transform: translateY(-130px); opacity: 1; } /* Começando movimento ainda visível */
@@ -183,12 +184,13 @@
             37% { transform: translateY(-180px); opacity: 0.8; } /* Leve fade no meio */
             38% { transform: translateY(-200px); opacity: 0.5; } /* Fade mais acentuado */
             39% { transform: translateY(-220px); opacity: 0.2; } /* Quase invisível */
-            40% { transform: translateY(-238px); opacity: 0; } /* INVISÍVEL só no final */
-            40.5% { transform: translateY(-200px); opacity: 0; } /* Começa transparente mais baixo */
-            41% { transform: translateY(-220px); opacity: 0.3; } /* Subindo e aparecendo */
-            41.5% { transform: translateY(-235px); opacity: 0.6; } /* Continuando a subir e aparecer */
-            42% { transform: translateY(-241px); opacity: 0.8; } /* Quase na posição, quase visível */
-            42.5% { transform: translateY(-240px); opacity: 1; } /* Posição final + totalmente visível */
+            40% { transform: translateY(-238px); opacity: 0; } /* INVISÍVEL só no final - início da chegada */
+            40.5% { transform: translateY(-239px); opacity: 0.1; } /* Começando fade-in bem suave */
+            41% { transform: translateY(-240px); opacity: 0.2; } /* Fade-in gradual */
+            41.5% { transform: translateY(-241px); opacity: 0.4; } /* Continuando fade-in */
+            42% { transform: translateY(-242px); opacity: 0.6; } /* Mais visível */
+            42.5% { transform: translateY(-241px); opacity: 0.8; } /* Quase totalmente visível */
+            43% { transform: translateY(-240px); opacity: 1; } /* Totalmente visível na posição final */
             44.5% { transform: translateY(-240px); opacity: 1; } /* Posição final mantida */
             56% { transform: translateY(-240px); opacity: 1; } /* Menos tempo parado */
             57% { transform: translateY(-250px); opacity: 1; } /* Começando movimento ainda visível */
@@ -196,12 +198,13 @@
             59% { transform: translateY(-300px); opacity: 0.8; } /* Leve fade no meio */
             60% { transform: translateY(-320px); opacity: 0.5; } /* Fade mais acentuado */
             61% { transform: translateY(-340px); opacity: 0.2; } /* Quase invisível */
-            62% { transform: translateY(-358px); opacity: 0; } /* INVISÍVEL só no final */
-            62.5% { transform: translateY(-320px); opacity: 0; } /* Começa transparente mais baixo */
-            63% { transform: translateY(-340px); opacity: 0.3; } /* Subindo e aparecendo */
-            63.5% { transform: translateY(-355px); opacity: 0.6; } /* Continuando a subir e aparecer */
-            64% { transform: translateY(-361px); opacity: 0.8; } /* Quase na posição, quase visível */
-            64.5% { transform: translateY(-360px); opacity: 1; } /* Posição final + totalmente visível */
+            62% { transform: translateY(-358px); opacity: 0; } /* INVISÍVEL só no final - início da chegada */
+            62.5% { transform: translateY(-359px); opacity: 0.1; } /* Começando fade-in bem suave */
+            63% { transform: translateY(-360px); opacity: 0.2; } /* Fade-in gradual */
+            63.5% { transform: translateY(-361px); opacity: 0.4; } /* Continuando fade-in */
+            64% { transform: translateY(-362px); opacity: 0.6; } /* Mais visível */
+            64.5% { transform: translateY(-361px); opacity: 0.8; } /* Quase totalmente visível */
+            65% { transform: translateY(-360px); opacity: 1; } /* Totalmente visível na posição final */
             66.5% { transform: translateY(-360px); opacity: 1; } /* Posição final mantida */
             78% { transform: translateY(-360px); opacity: 1; } /* Menos tempo parado */
             79% { transform: translateY(-370px); opacity: 1; } /* Começando movimento ainda visível */
@@ -209,12 +212,13 @@
             81% { transform: translateY(-420px); opacity: 0.8; } /* Leve fade no meio */
             82% { transform: translateY(-440px); opacity: 0.5; } /* Fade mais acentuado */
             83% { transform: translateY(-460px); opacity: 0.2; } /* Quase invisível */
-            84% { transform: translateY(-478px); opacity: 0; } /* INVISÍVEL só no final */
-            84.5% { transform: translateY(-440px); opacity: 0; } /* Começa transparente mais baixo */
-            85% { transform: translateY(-460px); opacity: 0.3; } /* Subindo e aparecendo */
-            85.5% { transform: translateY(-475px); opacity: 0.6; } /* Continuando a subir e aparecer */
-            86% { transform: translateY(-481px); opacity: 0.8; } /* Quase na posição, quase visível */
-            86.5% { transform: translateY(-480px); opacity: 1; } /* Posição final + totalmente visível */
+            84% { transform: translateY(-478px); opacity: 0; } /* INVISÍVEL só no final - início da chegada */
+            84.5% { transform: translateY(-479px); opacity: 0.1; } /* Começando fade-in bem suave */
+            85% { transform: translateY(-480px); opacity: 0.2; } /* Fade-in gradual */
+            85.5% { transform: translateY(-481px); opacity: 0.4; } /* Continuando fade-in */
+            86% { transform: translateY(-482px); opacity: 0.6; } /* Mais visível */
+            86.5% { transform: translateY(-481px); opacity: 0.8; } /* Quase totalmente visível */
+            87% { transform: translateY(-480px); opacity: 1; } /* Totalmente visível na posição final */
             88.5% { transform: translateY(-480px); opacity: 1; } /* Posição final mantida */
             89% { transform: translateY(-480px); opacity: 1; } /* FLASH rápido da segunda palavra negócio */
             100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
