--- a/index.html
+++ b/index.html
@@ -170,54 +170,54 @@
             15% { transform: translateY(-60px); opacity: 0.8; } /* Leve fade no meio */
             16% { transform: translateY(-80px); opacity: 0.5; } /* Fade mais acentuado */
             17% { transform: translateY(-100px); opacity: 0.2; } /* Quase invisível */
-            18% { transform: translateY(-118px); opacity: 0; } /* INVISÍVEL - início da chegada */
-            18.5% { transform: translateY(-119px); opacity: 0.1; } /* Começando fade-in */
-            19% { transform: translateY(-120px); opacity: 0.3; } /* Fade-in gradual */
-            19.5% { transform: translateY(-121px); opacity: 0.5; } /* Continuando fade-in */
-            20% { transform: translateY(-122px); opacity: 0.7; } /* Quase visível */
-            20.5% { transform: translateY(-121px); opacity: 0.9; } /* Quase totalmente visível */
-            21% { transform: translateY(-120px); opacity: 1; } /* TOTALMENTE PRETA - fica assim até sair */
-            34% { transform: translateY(-120px); opacity: 1; } /* PERMANECE TOTALMENTE PRETA */
+            18% { transform: translateY(-118px); opacity: 0; color: rgba(180,180,180,0); } /* INVISÍVEL - início da chegada */
+            18.5% { transform: translateY(-119px); opacity: 0.1; color: rgba(180,180,180,0.1); } /* Começando fade-in cinza claro */
+            19% { transform: translateY(-120px); opacity: 0.3; color: rgba(150,150,150,0.3); } /* Fade-in gradual cinza */
+            19.5% { transform: translateY(-121px); opacity: 0.5; color: rgba(120,120,120,0.5); } /* Continuando fade-in cinza médio */
+            20% { transform: translateY(-122px); opacity: 0.7; color: rgba(90,90,90,0.7); } /* Quase visível cinza escuro */
+            20.5% { transform: translateY(-121px); opacity: 0.9; color: rgba(60,60,60,0.9); } /* Quase totalmente visível cinza muito escuro */
+            21% { transform: translateY(-120px); opacity: 1; color: rgba(0,0,0,0.9); } /* TOTALMENTE PRETA - fica assim até sair */
+            34% { transform: translateY(-120px); opacity: 1; color: rgba(0,0,0,0.9); } /* PERMANECE TOTALMENTE PRETA */
             35% { transform: translateY(-130px); opacity: 1; } /* Começando movimento ainda visível */
             36% { transform: translateY(-160px); opacity: 1; } /* Movimento mantendo visibilidade */
             37% { transform: translateY(-180px); opacity: 0.8; } /* Leve fade no meio */
             38% { transform: translateY(-200px); opacity: 0.5; } /* Fade mais acentuado */
             39% { transform: translateY(-220px); opacity: 0.2; } /* Quase invisível */
-            40% { transform: translateY(-238px); opacity: 0; } /* INVISÍVEL - início da chegada */
-            40.5% { transform: translateY(-239px); opacity: 0.1; } /* Começando fade-in */
-            41% { transform: translateY(-240px); opacity: 0.3; } /* Fade-in gradual */
-            41.5% { transform: translateY(-241px); opacity: 0.5; } /* Continuando fade-in */
-            42% { transform: translateY(-242px); opacity: 0.7; } /* Quase visível */
-            42.5% { transform: translateY(-241px); opacity: 0.9; } /* Quase totalmente visível */
-            43% { transform: translateY(-240px); opacity: 1; } /* TOTALMENTE PRETA - fica assim até sair */
-            56% { transform: translateY(-240px); opacity: 1; } /* PERMANECE TOTALMENTE PRETA */
+            40% { transform: translateY(-238px); opacity: 0; color: rgba(180,180,180,0); } /* INVISÍVEL - início da chegada */
+            40.5% { transform: translateY(-239px); opacity: 0.1; color: rgba(180,180,180,0.1); } /* Começando fade-in cinza claro */
+            41% { transform: translateY(-240px); opacity: 0.3; color: rgba(150,150,150,0.3); } /* Fade-in gradual cinza */
+            41.5% { transform: translateY(-241px); opacity: 0.5; color: rgba(120,120,120,0.5); } /* Continuando fade-in cinza médio */
+            42% { transform: translateY(-242px); opacity: 0.7; color: rgba(90,90,90,0.7); } /* Quase visível cinza escuro */
+            42.5% { transform: translateY(-241px); opacity: 0.9; color: rgba(60,60,60,0.9); } /* Quase totalmente visível cinza muito escuro */
+            43% { transform: translateY(-240px); opacity: 1; color: rgba(0,0,0,0.9); } /* TOTALMENTE PRETA - fica assim até sair */
+            56% { transform: translateY(-240px); opacity: 1; color: rgba(0,0,0,0.9); } /* PERMANECE TOTALMENTE PRETA */
             57% { transform: translateY(-250px); opacity: 1; } /* Começando movimento ainda visível */
             58% { transform: translateY(-280px); opacity: 1; } /* Movimento mantendo visibilidade */
             59% { transform: translateY(-300px); opacity: 0.8; } /* Leve fade no meio */
             60% { transform: translateY(-320px); opacity: 0.5; } /* Fade mais acentuado */
             61% { transform: translateY(-340px); opacity: 0.2; } /* Quase invisível */
-            62% { transform: translateY(-358px); opacity: 0; } /* INVISÍVEL - início da chegada */
-            62.5% { transform: translateY(-359px); opacity: 0.1; } /* Começando fade-in */
-            63% { transform: translateY(-360px); opacity: 0.3; } /* Fade-in gradual */
-            63.5% { transform: translateY(-361px); opacity: 0.5; } /* Continuando fade-in */
-            64% { transform: translateY(-362px); opacity: 0.7; } /* Quase visível */
-            64.5% { transform: translateY(-361px); opacity: 0.9; } /* Quase totalmente visível */
-            65% { transform: translateY(-360px); opacity: 1; } /* TOTALMENTE PRETA - fica assim até sair */
-            78% { transform: translateY(-360px); opacity: 1; } /* PERMANECE TOTALMENTE PRETA */
+            62% { transform: translateY(-358px); opacity: 0; color: rgba(180,180,180,0); } /* INVISÍVEL - início da chegada */
+            62.5% { transform: translateY(-359px); opacity: 0.1; color: rgba(180,180,180,0.1); } /* Começando fade-in cinza claro */
+            63% { transform: translateY(-360px); opacity: 0.3; color: rgba(150,150,150,0.3); } /* Fade-in gradual cinza */
+            63.5% { transform: translateY(-361px); opacity: 0.5; color: rgba(120,120,120,0.5); } /* Continuando fade-in cinza médio */
+            64% { transform: translateY(-362px); opacity: 0.7; color: rgba(90,90,90,0.7); } /* Quase visível cinza escuro */
+            64.5% { transform: translateY(-361px); opacity: 0.9; color: rgba(60,60,60,0.9); } /* Quase totalmente visível cinza muito escuro */
+            65% { transform: translateY(-360px); opacity: 1; color: rgba(0,0,0,0.9); } /* TOTALMENTE PRETA - fica assim até sair */
+            78% { transform: translateY(-360px); opacity: 1; color: rgba(0,0,0,0.9); } /* PERMANECE TOTALMENTE PRETA */
             79% { transform: translateY(-370px); opacity: 1; } /* Começando movimento ainda visível */
             80% { transform: translateY(-400px); opacity: 1; } /* Movimento mantendo visibilidade */
             81% { transform: translateY(-420px); opacity: 0.8; } /* Leve fade no meio */
             82% { transform: translateY(-440px); opacity: 0.5; } /* Fade mais acentuado */
             83% { transform: translateY(-460px); opacity: 0.2; } /* Quase invisível */
-            84% { transform: translateY(-478px); opacity: 0; } /* INVISÍVEL - início da chegada */
-            84.5% { transform: translateY(-479px); opacity: 0.1; } /* Começando fade-in */
-            85% { transform: translateY(-480px); opacity: 0.3; } /* Fade-in gradual */
-            85.5% { transform: translateY(-481px); opacity: 0.5; } /* Continuando fade-in */
-            86% { transform: translateY(-482px); opacity: 0.7; } /* Quase visível */
-            86.5% { transform: translateY(-481px); opacity: 0.9; } /* Quase totalmente visível */
-            87% { transform: translateY(-480px); opacity: 1; } /* TOTALMENTE PRETA - fica assim até sair */
-            89% { transform: translateY(-480px); opacity: 1; } /* PERMANECE TOTALMENTE PRETA - FLASH rápido da segunda palavra negócio */
-            100% { transform: translateY(-480px); opacity: 1; } /* Mantém posição no final */
+            84% { transform: translateY(-478px); opacity: 0; color: rgba(180,180,180,0); } /* INVISÍVEL - início da chegada */
+            84.5% { transform: translateY(-479px); opacity: 0.1; color: rgba(180,180,180,0.1); } /* Começando fade-in cinza claro */
+            85% { transform: translateY(-480px); opacity: 0.3; color: rgba(150,150,150,0.3); } /* Fade-in gradual cinza */
+            85.5% { transform: translateY(-481px); opacity: 0.5; color: rgba(120,120,120,0.5); } /* Continuando fade-in cinza médio */
+            86% { transform: translateY(-482px); opacity: 0.7; color: rgba(90,90,90,0.7); } /* Quase visível cinza escuro */
+            86.5% { transform: translateY(-481px); opacity: 0.9; color: rgba(60,60,60,0.9); } /* Quase totalmente visível cinza muito escuro */
+            87% { transform: translateY(-480px); opacity: 1; color: rgba(0,0,0,0.9); } /* TOTALMENTE PRETA - fica assim até sair */
+            89% { transform: translateY(-480px); opacity: 1; color: rgba(0,0,0,0.9); } /* PERMANECE TOTALMENTE PRETA - FLASH rápido da segunda palavra negócio */
+            100% { transform: translateY(-480px); opacity: 1; color: rgba(0,0,0,0.9); } /* Mantém posição no final */
         }
 
         .hero-subtitle {
